fix style break in Telerik Blazor 3.0

--- a/src/theme/MultiFamilyPortal.SideBarTheme/wwwroot/css/site.css
+++ b/src/theme/MultiFamilyPortal.SideBarTheme/wwwroot/css/site.css
@@ -84,6 +84,10 @@ textarea {
   border: none;
 }
 
+.k-picker {
+  background-color: unset !important;
+}
+
 .k-tabstrip-items .k-item {
   color: blue;
 }
